[package]
name = "release-me"
version = "0.1.0"
authors = ["Fabien JUIF <fabien.juif@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Create your release with ease!"
documentation = "https://docs.rs/crate/release-me"
repository = "https://github.com/fabienjuif/release-me"
readme = "README.md"

[dependencies]
reqwest = "0.9.5"
serde_derive = "1.0.83"
serde = "1.0.83"
serde_json = "1.0.33"
