[package]
name = "release-me"
version = "0.1.0"
authors = ["Fabien JUIF <fabien.juif@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Create your release with ease!"
documentation = "https://docs.rs/crate/release-me"
repository = "https://github.com/fabienjuif/release-me"
readme = "README.md"

[dependencies]
reqwest = "0.9.5"
serde_derive = "1.0.83"
serde = "1.0.83"
serde_json = "1.0.33"
gitmoji-changelog = "0.3.0"
clap = "2.32.0"
git2 = "0.8.0"
lazy_static = "1.2.0"
regex = "1.1.0"
openssl-probe = "0.1.2"

[profile.release]
lto=true
